# netwatcher-py

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  config.toml.example  netwatcher_visual_guide.html  netwatcher_visual_guide_updated.html  pyproject.toml  pytest.ini  setup.py
.github/workflows/: tests.yml
src/: __init__.py  __main__.py  actions.py  cli.py  com.user.netwatcher.plist  config.py  logging_config.py  watcher.py
src/location/: __init__.py  matching.py  settings.py
src/network/: __init__.py  cache.py  configuration.py  detection.py  interfaces.py  pac_parser.py  proxy_detection.py  shell_proxy.py
src/utils/: __init__.py  commands.py  native.py
tests/: README.md  __init__.py  conftest.py  test_config.py  test_ipinfo.py  test_proxy_detection.py  test_shell_proxy.py
