[project]
name = "netwatcher"
version = "0.2.0"
description = "A tool to automatically reconfigure network settings on macOS when the network environment changes."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyobjc-framework-SystemConfiguration",
    "pyobjc-framework-CoreWLAN",
    "pyobjc-framework-CoreLocation",
    "rumps",
    "toml",
    "click",
    "netifaces",
]

[project.scripts]
netwatcher = "src.cli:cli"
netwatcher-agent = "src.watcher:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
